--- a/RevitWebApp/RevitWebApp.csproj
+++ b/RevitWebApp/RevitWebApp.csproj
@@ -111,6 +111,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Properties\TextFile1.txt" />
     <Content Include="RevitWebApp.addin" />
     <Content Include="ui\index.html" />
     <Content Include="ui\index.js" />
